--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,24 +1,41 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .no-border-radius {
-  border-radius: 0 !important;
+	border-radius: 0 !important;
 }
 
 [hidden] {
-  display: none !important;
+	display: none !important;
+}
+
+.content-cell-text,
+.content-cell-object > ol > li > div,
+.details-cell > .details-cell:nth-child(2) > ol > li > div {
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 3;
+}
+.content-cell-text {
+	-webkit-line-clamp: 2;
+}
+
+.content-cell-object > ol > li > div {
+	-webkit-line-clamp: 1;
 }
