feat: Melhor larg das colunas detalhes e conteúdo

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,4 +54,8 @@ a {
 	.MuiTablePagination-selectLabel + .MuiInputBase-root {
 		margin-right: 8px;
 	}
+
+	.mobile-minWidth-300px {
+		min-width: 300px;
+	}
 }
